add the loves list

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,9 @@ allprojects {
     repositories {
         google()
         jcenter(){ url 'https://maven.aliyun.com/repository/jcenter' }
-
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
